# TinkerTools

./: .gitignore  README.md  standard.c  utils.h
crypto/: Makefile  base64.c
jwt/: jwt.c  jwt.h  meson.build
libs/list/: list.h
list/: list.c  list.h
net/: socket_connection.c
parser/: Makefile  csv_parser.c
pwn/: Makefile  de_bruijn.c  env_var.c  mini_payload.c
pwn/disass/: Makefile  disass.c
pwn/elf_parser/: Makefile  elf_structure.md  parser.c
steg/: Makefile  lsb.c  meson.build
templates/: Makefile  basic_ncurses.c  basis.c  basis_with_args.c  file_read.c
test/: data_in_lsb  extracted_text_section
